--- a/Final_Code.ipynb
+++ b/Final_Code.ipynb
@@ -2770,12 +2770,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0f90371d-9085-4d85-8116-f45ded37c66b",
+        "outputId": "d52275f9-a680-4d3b-b27d-1d734d1fe819",
         "id": "qGSd-VrxCiLz"
       },
       "outputs": [
@@ -2783,19 +2783,21 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model: \"sequential_3\"\n",
+            "Model: \"sequential_4\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " dense_9 (Dense)             (None, 12)                528       \n",
+            " dense_12 (Dense)            (None, 100)               4400      \n",
             "                                                                 \n",
-            " dense_10 (Dense)            (None, 6)                 78        \n",
+            " dense_13 (Dense)            (None, 30)                3030      \n",
             "                                                                 \n",
-            " dense_11 (Dense)            (None, 1)                 7         \n",
+            " dense_14 (Dense)            (None, 10)                310       \n",
+            "                                                                 \n",
+            " dense_15 (Dense)            (None, 1)                 11        \n",
             "                                                                 \n",
             "=================================================================\n",
-            "Total params: 613 (2.39 KB)\n",
-            "Trainable params: 613 (2.39 KB)\n",
+            "Total params: 7751 (30.28 KB)\n",
+            "Trainable params: 7751 (30.28 KB)\n",
             "Non-trainable params: 0 (0.00 Byte)\n",
             "_________________________________________________________________\n"
           ]
@@ -2803,23 +2805,303 @@
       ],
       "source": [
         "# Define the model - deep neural net, i.e., the number of input features and hidden nodes for each layer.\n",
-        "input_features_total = len(X_train[0])\n",
-        "hidden_nodes_layer1 = 12\n",
-        "hidden_nodes_layer2 = 6\n",
+        "number_input_features = len(X_train[0])\n",
+        "hidden_nodes_layer1 =  100\n",
+        "hidden_nodes_layer2 = 30\n",
+        "hidden_nodes_layer3 = 10\n",
         "\n",
         "nn = tf.keras.models.Sequential()\n",
         "\n",
         "# First hidden layer\n",
-        "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer1, input_dim = input_features_total, activation = \"relu\"))\n",
+        "nn.add(\n",
+        "    tf.keras.layers.Dense(units=hidden_nodes_layer1, input_dim=number_input_features, activation=\"relu\")\n",
+        ")\n",
         "\n",
         "# Second hidden layer\n",
-        "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer2, activation = \"relu\"))\n",
+        "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer2, activation=\"tanh\"))\n",
+        "\n",
+        "# Third hidden layer\n",
+        "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer3, activation=\"sigmoid\"))\n",
         "\n",
         "# Output layer\n",
         "nn.add(tf.keras.layers.Dense(units=1, activation=\"sigmoid\"))\n",
         "\n",
         "# Check the structure of the model\n",
         "nn.summary()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 62,
+      "metadata": {
+        "id": "lvqMSzmEDnDr"
+      },
+      "outputs": [],
+      "source": [
+        "# Compile the model\n",
+        "nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 63,
+      "metadata": {
+        "outputId": "a797c696-afcb-4c2a-c796-fb0700bd3793",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yfOrpP30DwDl"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/100\n",
+            "804/804 [==============================] - 4s 2ms/step - loss: 0.5748 - accuracy: 0.7199\n",
+            "Epoch 2/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5566 - accuracy: 0.7305\n",
+            "Epoch 3/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5531 - accuracy: 0.7309\n",
+            "Epoch 4/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5513 - accuracy: 0.7312\n",
+            "Epoch 5/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5499 - accuracy: 0.7338\n",
+            "Epoch 6/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5487 - accuracy: 0.7324\n",
+            "Epoch 7/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5485 - accuracy: 0.7336\n",
+            "Epoch 8/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5472 - accuracy: 0.7342\n",
+            "Epoch 9/100\n",
+            "804/804 [==============================] - 2s 3ms/step - loss: 0.5461 - accuracy: 0.7340\n",
+            "Epoch 10/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5457 - accuracy: 0.7348\n",
+            "Epoch 11/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5450 - accuracy: 0.7340\n",
+            "Epoch 12/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5437 - accuracy: 0.7354\n",
+            "Epoch 13/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5438 - accuracy: 0.7352\n",
+            "Epoch 14/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5430 - accuracy: 0.7361\n",
+            "Epoch 15/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5430 - accuracy: 0.7361\n",
+            "Epoch 16/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5424 - accuracy: 0.7367\n",
+            "Epoch 17/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5416 - accuracy: 0.7361\n",
+            "Epoch 18/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5413 - accuracy: 0.7380\n",
+            "Epoch 19/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5411 - accuracy: 0.7370\n",
+            "Epoch 20/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5407 - accuracy: 0.7365\n",
+            "Epoch 21/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5401 - accuracy: 0.7390\n",
+            "Epoch 22/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5400 - accuracy: 0.7381\n",
+            "Epoch 23/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5404 - accuracy: 0.7381\n",
+            "Epoch 24/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5397 - accuracy: 0.7381\n",
+            "Epoch 25/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5393 - accuracy: 0.7384\n",
+            "Epoch 26/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5390 - accuracy: 0.7376\n",
+            "Epoch 27/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5388 - accuracy: 0.7392\n",
+            "Epoch 28/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5387 - accuracy: 0.7389\n",
+            "Epoch 29/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5384 - accuracy: 0.7388\n",
+            "Epoch 30/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5380 - accuracy: 0.7395\n",
+            "Epoch 31/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5378 - accuracy: 0.7397\n",
+            "Epoch 32/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5383 - accuracy: 0.7387\n",
+            "Epoch 33/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5374 - accuracy: 0.7398\n",
+            "Epoch 34/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5373 - accuracy: 0.7393\n",
+            "Epoch 35/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5375 - accuracy: 0.7394\n",
+            "Epoch 36/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5374 - accuracy: 0.7394\n",
+            "Epoch 37/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5371 - accuracy: 0.7394\n",
+            "Epoch 38/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5368 - accuracy: 0.7394\n",
+            "Epoch 39/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5365 - accuracy: 0.7400\n",
+            "Epoch 40/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5369 - accuracy: 0.7400\n",
+            "Epoch 41/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5366 - accuracy: 0.7399\n",
+            "Epoch 42/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5362 - accuracy: 0.7391\n",
+            "Epoch 43/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5360 - accuracy: 0.7391\n",
+            "Epoch 44/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5360 - accuracy: 0.7402\n",
+            "Epoch 45/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5359 - accuracy: 0.7400\n",
+            "Epoch 46/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5361 - accuracy: 0.7408\n",
+            "Epoch 47/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5358 - accuracy: 0.7397\n",
+            "Epoch 48/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5359 - accuracy: 0.7399\n",
+            "Epoch 49/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5359 - accuracy: 0.7397\n",
+            "Epoch 50/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5356 - accuracy: 0.7404\n",
+            "Epoch 51/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5355 - accuracy: 0.7406\n",
+            "Epoch 52/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5351 - accuracy: 0.7407\n",
+            "Epoch 53/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5355 - accuracy: 0.7405\n",
+            "Epoch 54/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5350 - accuracy: 0.7408\n",
+            "Epoch 55/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5350 - accuracy: 0.7400\n",
+            "Epoch 56/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5353 - accuracy: 0.7396\n",
+            "Epoch 57/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5347 - accuracy: 0.7405\n",
+            "Epoch 58/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5348 - accuracy: 0.7407\n",
+            "Epoch 59/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5344 - accuracy: 0.7413\n",
+            "Epoch 60/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5351 - accuracy: 0.7393\n",
+            "Epoch 61/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5346 - accuracy: 0.7409\n",
+            "Epoch 62/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5346 - accuracy: 0.7405\n",
+            "Epoch 63/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5341 - accuracy: 0.7410\n",
+            "Epoch 64/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5343 - accuracy: 0.7407\n",
+            "Epoch 65/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5347 - accuracy: 0.7409\n",
+            "Epoch 66/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5344 - accuracy: 0.7404\n",
+            "Epoch 67/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5344 - accuracy: 0.7407\n",
+            "Epoch 68/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5344 - accuracy: 0.7410\n",
+            "Epoch 69/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5342 - accuracy: 0.7409\n",
+            "Epoch 70/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5342 - accuracy: 0.7408\n",
+            "Epoch 71/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5347 - accuracy: 0.7408\n",
+            "Epoch 72/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5344 - accuracy: 0.7411\n",
+            "Epoch 73/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5340 - accuracy: 0.7406\n",
+            "Epoch 74/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5342 - accuracy: 0.7412\n",
+            "Epoch 75/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5350 - accuracy: 0.7409\n",
+            "Epoch 76/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5340 - accuracy: 0.7409\n",
+            "Epoch 77/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5338 - accuracy: 0.7410\n",
+            "Epoch 78/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5336 - accuracy: 0.7412\n",
+            "Epoch 79/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5341 - accuracy: 0.7411\n",
+            "Epoch 80/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5335 - accuracy: 0.7413\n",
+            "Epoch 81/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5332 - accuracy: 0.7417\n",
+            "Epoch 82/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5332 - accuracy: 0.7416\n",
+            "Epoch 83/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5334 - accuracy: 0.7414\n",
+            "Epoch 84/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5331 - accuracy: 0.7411\n",
+            "Epoch 85/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5332 - accuracy: 0.7414\n",
+            "Epoch 86/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5338 - accuracy: 0.7409\n",
+            "Epoch 87/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5335 - accuracy: 0.7417\n",
+            "Epoch 88/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5328 - accuracy: 0.7415\n",
+            "Epoch 89/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5335 - accuracy: 0.7419\n",
+            "Epoch 90/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5329 - accuracy: 0.7420\n",
+            "Epoch 91/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5330 - accuracy: 0.7413\n",
+            "Epoch 92/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5335 - accuracy: 0.7413\n",
+            "Epoch 93/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5332 - accuracy: 0.7412\n",
+            "Epoch 94/100\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5332 - accuracy: 0.7412\n",
+            "Epoch 95/100\n",
+            "804/804 [==============================] - 2s 3ms/step - loss: 0.5334 - accuracy: 0.7413\n",
+            "Epoch 96/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5328 - accuracy: 0.7416\n",
+            "Epoch 97/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5327 - accuracy: 0.7412\n",
+            "Epoch 98/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5329 - accuracy: 0.7421\n",
+            "Epoch 99/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5330 - accuracy: 0.7414\n",
+            "Epoch 100/100\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5332 - accuracy: 0.7404\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Train the model\n",
+        "fit_model = nn.fit(X_train_scaled,y_train,epochs=100)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 64,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4dd5fb2b-749e-4609-b070-204fa0a3f9a8",
+        "id": "CSrhEsrqD0cn"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "268/268 - 0s - loss: 0.5574 - accuracy: 0.7266 - 421ms/epoch - 2ms/step\n",
+            "Loss: 0.5574377179145813, Accuracy: 0.7266472578048706\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Evaluate the model using the test data\n",
+        "model_loss, model_accuracy = nn.evaluate(X_test_scaled,y_test,verbose=2)\n",
+        "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 65,
+      "metadata": {
+        "id": "Ocf5efFcD7Pq"
+      },
+      "outputs": [],
+      "source": [
+        "# Export our model to HDF5 file\n",
+        "filepath = r\"Models/Charity3.h5\"\n",
+        "nn.save(filepath, save_format='h5')"
       ]
     }
   ],
