--- a/Final_Code.ipynb
+++ b/Final_Code.ipynb
@@ -39,15 +39,22 @@
         "Compiling, Training, and Evaluating the Model\n",
         "\n",
         "How many neurons, layers, and activation functions did you select for your neural network model, and why?\n",
-        "\n",
-        "\n",
         "Were you able to achieve the target model performance?\n",
-        "\n",
-        "\n",
         "What steps did you take in your attempts to increase model performance?\n",
         "\n",
         "\n",
-        "Summary: "
+        "My first attempt used 2 hidden layers with 8 and 5 nodes using relu functions and sigmoid for the output this gave me an accuracy score of 72.9%. I used this as a starting point to get an accuracy score. \n",
+        "\n",
+        "My second attempt used 2 hidden layers and increased the nodes to 12 and 6 and used the relu functions again and sigmoid for the output this gave me an accuracy score of 72.4% This produced a slighly worse accuracy score.\n",
+        "\n",
+        "My third attempt I expanded to 3 hidden layers and increased the number of nodes to 100, 30 and 10. I used all three functions in each layer (Relu, Tanh, and Sigmoid). This slightly improved the accuracy score to 72.6% from the second attempt, but the 1st attempt gave me the best results. \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "Summary: \n",
+        "\n",
+        "In the three attemps I made I was unable to acheive a target accuracy score of 75%. I was only able to acheive a score of 72.9%. Based on this I would consider using a different classification model to if I can get a better accuracy score. "
       ]
     },
     {
